# chatbot

./: README.md
client/: index.html
client/assets/: styles.css
server/: chat.db  db.py  pyproject.toml  server.py  strands_agent.py
